# docs/api-spec.yaml
@@ -123,7 +123,7 @@ paths:
                           allOf:
                             - $ref: '#/components/schemas/Member'
                             - properties:
-                                borrowedBooksTotal:
+                                borrowings:
                                   type: number
 components:
   responses:
@@ -181,19 +181,4 @@ components:
           required: true
         name:
           type: string
-          required: true
-    BorrowedBook:
-      type: object
-      properties:
-        code:
-          type: string
-          required: true
-        title:
-          type: string
-          required: true
-        author:
-          type: string
-          required: true
-        amount:
-          type: number
           required: true
